<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Authorization.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstNameTxtReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:hint="First Name"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/lastNameTxtReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:hint="Last Name"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/emailTxtReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/passwordTxtReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:hint="Password"
                android:inputType="numberPassword"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/bikeModelTxtReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:hint="Bike Model"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/bikeSizeTxtReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:hint="Bike Size"
                android:inputType="number"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/bikeTagIdTxtReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:hint="Tag ID"
                android:inputType="number"
                android:selectAllOnFocus="true" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="Register" />

            <TextView
                android:id="@+id/goToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="Have an account? LOG IN" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>