...
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="Login" />

        <TextView
            android:id="@+id/goToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="Don't have an account? Register!" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
